Wire the name index into the plugin: service, transport action, REST handler
Phase 5 built the mechanisms. This is the wiring that makes them reachable.

NameIndexService holds the index and keeps it fed from cluster state, so a
node's copy tracks index creates, deletes, closes and alias changes without
anything else having to remember to update it. Registered as a component and as
a cluster state listener, with a transport action and a REST handler in front.

Feeding from cluster state looks circular, given the architecture exists to stop
depending on cluster state. It is a deliberate first step: the cluster manager
still publishes index metadata, so that is the source which exists and is
correct today. What it buys immediately is that resolution stops walking
Metadata.indicesLookup, the O(all indices) structure the design needs to retire.
When index metadata moves to the manifest, the feed changes and nothing above it
does. The apply() pass is itself O(all indices) and says so, because that cost
is temporary by construction.

Disabled by default, as C5 and C6 were. It answers questions core already
answers, so running both is pure cost until the switchover.

The plugin's own guard tests caught three things this change got wrong, which is
the best argument for having written them. Settings must be declared on the
plugin class, or an operator can never configure them -- so the Setting moved
there and the service keeps only the key. Every action must have a matching REST
handler, which forced the resolve endpoint to exist; that turns out to be worth
having anyway, since comparing this resolver against core's answer for the same
expression is how the switchover gets validated, and a resolver that cannot be
queried directly can only be compared by inference. And every REST handler must
declare its serverless scope.

Alias handling has one property worth stating: an alias exists only through the
indices that name it, so losing its last index removes it. Leaving it behin